<?xml version="1.0"?>
<package format="2">
  <name>kyon_actions</name>
  <version>0.0.0</version>
  <description>The kyon_actions package</description>
  <maintainer email="francesco.ruscelli@iit.it">Francesco Ruscelli</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
